6.0.1 (not yet released):
- Clean up the Makefile portion related to the generation of RPMs for
oscar-base.
- Clean up the spec file for oscar-base.
- Update ODA to 1.3.4.
- Update PackMan to 3.1.5.
- Update Yume to 2.8.4.
- Update Selector to 1.0.2.
- During bootstrapping, a log file is now created 
(/var/log/oscar/bootstrap.log).
- Include two new options to the oscar-config script: debug and verbose.
- During bootstrapping, we install only one core OPKG at a time, to be able to
really get details on errors.
- Fix a bug when generating the DHCPD configuration file on Debian.
- New abstraction for the management of system services.
- Include capabilities for file management: download and type detection.
- [Ticket #506] Include a "virtual" OSCAR RPM that allows the installation of
all dependencies needed for the OSCAR bootstrap.
- [Ticket #503] Configurator is now a separate component with its own SVN
tree, i.e., Configurator is now a prereq.
- [Ticket #507] With prereqs on RPM based system the dumb mode tries to use yum
is a package is not locally available. 
- [Torque OPKG] Update the list of prereqs for the creation of the binary
packages (build.cfg).
- Improve unit tests.
- [Ticket #463] Finish to remove all binary packages from the source tree,
oscar-packager provides the needed abstractions for the creation of binary
packages.
- Prereqs on RPM systems in dumb mode now try to use yum if a package is not
locally available.
- Include the patch from Felipe Zipitria: avoid warnings on some configuration
when using OSCAR::ConfigFile.
- Improve the perldoc documentation of different OSCAR Perl modules.
- [Ticket #502] Binary packages for oscar-base do not over-write the
/etc/oscar/oscar.conf file anymore.

6.0:
- Full support of on-line repositories.
- Implementation of a new bootstrapping mechanism via oscar-config.
- Installation using normal system paths.
- Continue the modularization effort (almost all core components are now in
separate packages).