@@ -1,4 +1,5 @@
 6.0.1 (not yet released):
+- Merge oscar-base.spec.in and oscar.spec.in.
 - Clean up the Makefile portion related to the generation of RPMs for
 oscar-base.
 - Clean up the spec file for oscar-base.
